--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				<p style="color: #96979b;" class="textCenter">
 					Установка онлайн-консультанта Webim не займет более 15 минут
 				</p>
-				<div style="display: flex;">
+				<div style="display: flex; flex-wrap: nowrap;">
 				<span id="num1">
 					<img src="images/num1.png" alt="">
 					<img src="images/icon1.png" alt="" class="wow swing" data-wow-delay="1s" style="width: 50px; height: 50px; z-index: 1; margin: 30px 0 0 -30px;"><br><br>
